Simplify gradle build scripts, bump dependencies